--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header--nav {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background: #3e4a61;
+  color: white;
+  height: 65px;
+}
+.trollface {
+  width: 60px;
+  margin-right: 15px;
+}
+.heading2 {
+  margin-right: auto;
+  font-size: 30px;
+  font-weight: 500;
+}
+.heading4 {
+  font-weight: 500;
+}
+.div--input {
+  margin: 60px 20px 20px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.form--input {
+  border: 1px solid gray;
+  border-radius: 5px;
+  height: 30px;
+  width: 23rem;
+  padding: 8px;
+  font-size: 17px;
+  font-weight: 600;
+  text-indent: 5px;
+  font-family: "Poppins", sans-serif;
+}
+.button--div {
+  display: flex;
+  justify-content: center;
+}
+.button--meme {
+  background-color: #3e4a61;
+  border: 2px solid #3e4a61;
+  border-radius: 5px;
+  color: white;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  width: 60%;
+  font-size: 25px;
+  padding: 8px;
+  margin-top: 40px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  cursor: pointer;
+}
+.imgpng {
+  width: 30px;
+  margin-left: 10px;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.image--container {
+  margin: 50px;
+  position: relative;
+  display: inline-block;
+}
+.display--image {
+  width: 600px;
+  height: 600px;
+  border: 2px solid gray;
+  border-radius: 4px;
+}
+.memeText {
+  position: absolute;
+  width: 100%;
+  text-align: center;
   color: white;
+  text-shadow: 2px 0 #000, -2px 0 #000,
+   0 2px #000, 0 -2px #000, 1px 1px #000,
+   -1px -1px #000, 1px -1px #000, -1px 1px #000;
+   font-size: 35px;
 }
-
-.App-link {
-  color: #61dafb;
+.top {
+  top: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bottom {
+  bottom: 0;
 }
